syntax = "proto3";

package meridian.membership.v010;

service Communications {
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
}

message JoinClusterRequest {
  string id = 1;
  string address = 2;
  string client_port = 3;
  string cluster_port = 4;
  string membership_port = 5;
}

message JoinClusterResponse {
  string success = 1;
  string details = 2;
  repeated string members = 3;
}
